scrollbar not showing in inspector-sidebar-container fixed

--- a/src/devtools/client/shared/components/Tabs.css
+++ b/src/devtools/client/shared/components/Tabs.css
@@ -5,6 +5,7 @@
 /* Tabs General Styles */
 
 .tabs {
+  height: 100%;
   background: var(--theme-sidebar-background);
   display: flex;
   flex-direction: column;
